# MemAxes

./: .gitignore  CMakeLists.txt  CorrelaViz.pro  README.md  Readme.md  codeeditor.cpp  codeeditor.h  codeviz.cpp  codeviz.h  console.cpp  console.h  correlationmatrixviz.cpp  correlationmatrixviz.h  dataobject.cpp  dataobject.h  form.ui  hardwaretopology.cpp  hardwaretopology.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memtopoviz.cpp  memtopoviz.h  parallelcoordinatesviz.cpp  parallelcoordinatesviz.h  scatterplotviz.cpp  scatterplotviz.h  selectionviz.cpp  selectionviz.h  util.cpp  util.h  varviz.cpp  varviz.h  vizwidget.cpp  vizwidget.h  volumeVizWidget.h  volumevizwidget.cpp  volumevizwidget.h
example_data/: CMakeLists.txt
example_data/lulesh/: hardware.xml
example_data/lulesh/data/: lulesh_inorder.out  samples.csv  samples.out
example_data/lulesh/hardware/: msn.xml
example_data/lulesh/src/: LULESH_OMP.cc  LULESH_OMP_ALLOC.cc
example_data/lulesh2/: hardware.xml
example_data/lulesh2/src/: lulesh.cc  lulesh.h
example_data/lulesh_close/src/: lulesh-init.cc  lulesh.cc
example_data/lulesh_n8_c5_b5_s50/: hardware.xml
example_data/lulesh_n8_c5_b5_s50/src/: lulesh.cc  lulesh.h
example_data/lulesh_spread/: hardware.xml
example_data/lulesh_spread/src/: lulesh-mitos.cc
example_data/src/: lulesh.cc
example_data/xsbench/: hardware.xml
example_data/xsbench/src/: Main.c
example_data/xsbench_n1_l30M/: hardware.xml
example_data/xsbench_new/: hardware.xml
example_data/xsbench_new/src/: GridInit.c  Main.c  Materials.c  XSutils.c  mitos.h  src.tgz
src/: CMakeLists.txt  axisvizwidget.cpp  axisvizwidget.h  clustermetrics.cpp  clustermetrics.h  clustertreevizwidget.cpp  clustertreevizwidget.h  codeeditor.cpp  codeeditor.h  codeviz.cpp  codeviz.h  codevizwidget.cpp  codevizwidget.h  console.cpp  console.h  correlationmatrixviz.cpp  correlationmatrixviz.h  datacluster.cpp  datacluster.h  dataobject.cpp  dataobject.h  form.ui  hardwaretopology.cpp  hardwaretopology.h  hwtopo.cpp  hwtopo.h  hwtopodrawable.cpp  hwtopodrawable.h  hwtopovizwidget.cpp  hwtopovizwidget.h  infovizwidget.cpp  infovizwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  memtopoviz.cpp  memtopoviz.h  parallelcoordinatesviz.cpp  parallelcoordinatesviz.h  parseUtil.cpp  (+15 more)
